fix(input, mixing): fix input placeholder mixing and fix label theming.
At the moment the placeholder mixing isn't working, so the the placeholder is always using the browsers default color (`darkgrey`).
This commit fixes the invalid mixin for the placeholder, so the floating label and normal placeholder won't look different anymore.

Also removed the `text-shadow`, because in the specs is no inset shadow, this makes the label look weird.
So the labels will now look as same as in the specs, except that the `foreground-3` color is currently not as same as in the specs. (because it has a opacity of 26, but it should have 38)

Fixes #7429

--- a/src/core/style/mixins.scss
+++ b/src/core/style/mixins.scss
@@ -15,12 +15,16 @@
 }
 
 @mixin input-placeholder-color($color) {
-  &::-webkit-input-placeholder,
-    &::-moz-placeholder,
-    &:-moz-placeholder,
-    &:-ms-input-placeholder {
-      color: $color;
+  $pseudos: '::-webkit-input-placeholder', ':-moz-placeholder', '::-moz-placeholder',
+            ':-ms-input-placeholder',  '::-webkit-input-placeholder';
+
+  // It is important to export every pseudo within its own block, because otherwise the placeholder
+  // won't be set on the most browsers.
+  @each $pseudo in $pseudos {
+    &#{$pseudo} {
+      color: unquote($color);
     }
+  }
 }
 
 @mixin pie-clearfix {
